unpackaged/main/default/objects/Lead/fields/Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Accommodations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accommodations</label>
    <type>Checkbox</type>
</CustomField>