unpackaged/main/default/objects/Lead/fields/Active_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Active_Source_Code__c</fullName>
    <description>Lead import for Campaign execution should populate this field.</description>
    <label>Active Source Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>