unpackaged/main/default/objects/Lead/fields/Audio_Visual__c.field-meta.xml
<CustomField>
    <fullName>Audio_Visual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt In for Marketing</description>
    <label>Audio-Visual</label>
    <type>Checkbox</type>
</CustomField>