unpackaged/main/default/objects/Lead/fields/Blog_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Blog_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GES Blog Opt-out</description>
    <label>Blog Opt-out</label>
    <type>Checkbox</type>
</CustomField>