unpackaged/main/default/objects/Lead/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <label>Booth Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>