unpackaged/main/default/objects/Lead/fields/Booth_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Type__c</fullName>
    <label>Booth Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Pavilion</fullName>
            </value>
            <value>
                <fullName>Table Top</fullName>
            </value>
            <value>
                <fullName>Meeting Room</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Raw Space</fullName>
            </value>
            <value>
                <fullName>Corner</fullName>
            </value>
            <value>
                <fullName>L Shape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>