unpackaged/main/default/objects/Lead/fields/Consumer_Events_B2C__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Events_B2C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Events (B2C)</label>
    <type>Checkbox</type>
</CustomField>