unpackaged/main/default/objects/Lead/fields/Direct_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Direct_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified lead for Direct Marketing campaigns</description>
    <label>Direct Marketing</label>
    <type>Checkbox</type>
</CustomField>