unpackaged/main/default/objects/Lead/fields/Disqualification_Details__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Details__c</fullName>
    <label>Disqualification Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>