unpackaged/main/default/objects/Lead/fields/E_E_Marketing_Communications__c.field-meta.xml
<CustomField>
    <fullName>E_E_Marketing_Communications__c</fullName>
    <label>E&amp;E Marketing Communications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intro Email</fullName>
            </value>
            <value>
                <fullName>Design Offer</fullName>
            </value>
            <value>
                <fullName>Cost Analysis</fullName>
            </value>
            <value>
                <fullName>Mktg Solutions Offer</fullName>
            </value>
            <value>
                <fullName>Portables</fullName>
            </value>
            <value>
                <fullName>Closing Email</fullName>
            </value>
            <value>
                <fullName>Phone Call # 1</fullName>
            </value>
            <value>
                <fullName>Phone Call # 2</fullName>
            </value>
            <value>
                <fullName>Web Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>