unpackaged/main/default/objects/Lead/fields/EE_GES_Event__c.field-meta.xml
<CustomField>
    <fullName>EE_GES_Event__c</fullName>
    <description>Allows Exhibits &amp; Events group to opt-in their leads for a specific marketing campaign</description>
    <label>Corp Acct GES Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2020 Alice Campaign</fullName>
            </value>
            <value>
                <fullName>EX18_VIP</fullName>
            </value>
            <value>
                <fullName>Coffee Mailer</fullName>
            </value>
            <value>
                <fullName>Exhibitor Live 2018</fullName>
            </value>
            <value>
                <fullName>2014 Springtime Reception</fullName>
            </value>
            <value>
                <fullName>EX15_VIP</fullName>
            </value>
            <value>
                <fullName>Activ8 NY</fullName>
            </value>
            <value>
                <fullName>A - Trend Tracker</fullName>
            </value>
            <value>
                <fullName>B - Trend Tracker</fullName>
            </value>
            <value>
                <fullName>IAEE</fullName>
            </value>
            <value>
                <fullName>EXSW</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>EX14_VIP</fullName>
            </value>
            <value>
                <fullName>EX13_VIP</fullName>
            </value>
            <value>
                <fullName>EX19_VIP</fullName>
            </value>
            <value>
                <fullName>EX19_BoothTeaser</fullName>
            </value>
            <value>
                <fullName>EXLIVE20_VIP_PARTY_INVITE</fullName>
            </value>
            <value>
                <fullName>EXLIVE20_BOOTH_INVITE</fullName>
            </value>
            <value>
                <fullName>EXLIVE20_BOOTH_INVITE_HOTLIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>