unpackaged/main/default/objects/Lead/fields/Est_Number_of_Booths_at_Show__c.field-meta.xml
<CustomField>
    <fullName>Est_Number_of_Booths_at_Show__c</fullName>
    <label>Est. Number of Booths (at Show)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>