unpackaged/main/default/objects/Lead/fields/Estimated_Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Attendee_Count__c</fullName>
    <label>Estimated Attendee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>