unpackaged/main/default/objects/Lead/fields/Estimated_Full_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Full_Year_Revenue__c</fullName>
    <label>Estimated Full Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>