unpackaged/main/default/objects/Lead/fields/Estimated_Revenue_in_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue_in_the_Year__c</fullName>
    <label>Estimated Revenue in the Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>