unpackaged/main/default/objects/Lead/fields/Event_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Event_Intelligence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt In for Marketing</description>
    <label>Event-Intelligence</label>
    <type>Checkbox</type>
</CustomField>