unpackaged/main/default/objects/Lead/fields/Event_Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue_Name__c</fullName>
    <label>Event Venue Name</label>
    <type>TextArea</type>
</CustomField>