unpackaged/main/default/objects/Lead/fields/Exhibit_Interest__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Interest__c</fullName>
    <description>Captures the exhibit category selection from the web form..</description>
    <label>Exhibit Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Design &amp; Build</fullName>
            </value>
            <value>
                <fullName>Global Program Management</fullName>
            </value>
            <value>
                <fullName>Spiro In-House Creative Studio</fullName>
            </value>
            <value>
                <fullName>Sustainable Modular Booths</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>