unpackaged/main/default/objects/Lead/fields/Exhibitions_Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>Exhibitions_Tradeshow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt In for Marketing</description>
    <label>Exhibitions-Tradeshow</label>
    <type>Checkbox</type>
</CustomField>