unpackaged/main/default/objects/Lead/fields/Express_Consent__c.field-meta.xml
<CustomField>
    <fullName>Express_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Express Consent</label>
    <type>Checkbox</type>
</CustomField>