unpackaged/main/default/objects/Lead/fields/GES_Event__c.field-meta.xml
<CustomField>
    <fullName>GES_Event__c</fullName>
    <label>GES Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020 Global Virtual Campaign</fullName>
            </value>
            <value>
                <fullName>2016 Springtime Reception</fullName>
            </value>
            <value>
                <fullName>Activ8 DC</fullName>
            </value>
            <value>
                <fullName>Activ8 NY</fullName>
            </value>
            <value>
                <fullName>Gold Cup</fullName>
            </value>
            <value>
                <fullName>IAEE</fullName>
            </value>
            <value>
                <fullName>PCMA</fullName>
            </value>
            <value>
                <fullName>St. Patrick&#39;s - Chicago</fullName>
            </value>
            <value>
                <fullName>Spring California - Pebble Beach</fullName>
            </value>
            <value>
                <fullName>Fishing Trip - California</fullName>
            </value>
            <value>
                <fullName>Partner&#39;s Picnic - San Diego</fullName>
            </value>
            <value>
                <fullName>Springtime Reception DC</fullName>
            </value>
            <value>
                <fullName>PCMA Bowl-a-Thon Chicago</fullName>
            </value>
            <value>
                <fullName>Los Angeles - Valentine&#39;s Day Gift</fullName>
            </value>
            <value>
                <fullName>Sacramento Spa Day</fullName>
            </value>
            <value>
                <fullName>Sacramento Client BBQ</fullName>
            </value>
            <value>
                <fullName>Sacramento Fly Fishing Trip</fullName>
            </value>
            <value>
                <fullName>Los Angeles Newsletter</fullName>
            </value>
            <value>
                <fullName>Spring10RSVP</fullName>
            </value>
            <value>
                <fullName>Springtime-2009</fullName>
            </value>
            <value>
                <fullName>Springtime-2010</fullName>
            </value>
            <value>
                <fullName>EXSW-VIP</fullName>
            </value>
            <value>
                <fullName>Drive Attendance webinar - Attendee</fullName>
            </value>
            <value>
                <fullName>Drive Attendance webinar - Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>