unpackaged/main/default/objects/Lead/fields/Hard_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Hard_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>