unpackaged/main/default/objects/Lead/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <label>Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>