unpackaged/main/default/objects/Lead/fields/Ideal_Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Client_Profile__c</fullName>
    <label>Ideal Client Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Events</fullName>
            </value>
            <value>
                <fullName>US OnServices</fullName>
            </value>
            <value>
                <fullName>US Exhibitions</fullName>
            </value>
            <value>
                <fullName>US Corporate Accounts - Show</fullName>
            </value>
            <value>
                <fullName>US Corporate Accounts – Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>