unpackaged/main/default/objects/Lead/fields/Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Converted</label>
    <type>Checkbox</type>
</CustomField>