unpackaged/main/default/objects/Lead/fields/Last_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Source__c</fullName>
    <description>Populated by Marketo</description>
    <label>Last Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advantage Program-Priority</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Amsterdam - Lead Gen Team</fullName>
            </value>
            <value>
                <fullName>BDM - Exhibitor Sales</fullName>
            </value>
            <value>
                <fullName>Blitz|GES Connection</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Client recommendation</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Colleague Referral</fullName>
            </value>
            <value>
                <fullName>Commissionable Venue Recommendation</fullName>
            </value>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>Convention Center</fullName>
            </value>
            <value>
                <fullName>Cost Analysis Offer</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Dubai - Lead Gen Team</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>E-Marketing</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>EUROSHOP 2017</fullName>
            </value>
            <value>
                <fullName>Eventit</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>German Lead Gen</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>IMEX</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Inbound ServiCentre</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Industry Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>