unpackaged/main/default/objects/Lead/fields/Lead_Details_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>Lead_Details_to_Opp__c</fullName>
    <label>Lead Source Details to Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>