unpackaged/main/default/objects/Lead/fields/Lead_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Category__c</fullName>
    <label>Lead Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visited Booth</fullName>
            </value>
            <value>
                <fullName>Visited Booth/Voucher</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>No show/Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>