unpackaged/main/default/objects/Lead/fields/Marketo_Ignore__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketo Ignore</label>
    <type>Checkbox</type>
</CustomField>