unpackaged/main/default/objects/Lead/fields/MCL_Date__c.field-meta.xml
<CustomField>
    <fullName>MCL_Date__c</fullName>
    <label>MCL Date</label>
    <type>Date</type>
</CustomField>