unpackaged/main/default/objects/Lead/fields/mkto71_0riginal_Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>mkto71_0riginal_Search_Engine__c</fullName>
    <label>Original Search Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>