unpackaged/main/default/objects/Lead/fields/Number_of_Show_Occurrences__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Show_Occurrences__c</fullName>
    <label>Number of Show Occurrences</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>