unpackaged/main/default/objects/Lead/fields/Other_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry_Type__c</fullName>
    <description>Please specify industry type, if it is not in drop down list.</description>
    <inlineHelpText>Please specify industry type, if it is not in drop down list.</inlineHelpText>
    <label>Other Industry Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>