unpackaged/main/default/objects/Lead/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&#39;s Manager</label>
    <type>Text</type>
</CustomField>