unpackaged/main/default/objects/Lead/fields/Owner_Selling_Group__c.field-meta.xml
<CustomField>
    <fullName>Owner_Selling_Group__c</fullName>
    <formula>TEXT(Owner:User.Selling_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Selling Group</label>
    <type>Text</type>
</CustomField>