unpackaged/main/default/objects/Lead/fields/Purchased_List_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_List_Expiration_Date__c</fullName>
    <label>Purchased List Expiration Date</label>
    <type>Date</type>
</CustomField>