unpackaged/main/default/objects/Lead/fields/Recycle_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycle_Reason__c</fullName>
    <description>This is a dependent field.  When “Lead Status” field is changed to “Marketing Recycle”, SFDC user will receive dialog message to also select value from “Recycle Reason” picklist.</description>
    <label>Recycle Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Sales Activity</fullName>
            </value>
            <value>
                <fullName>No Lead Engagement</fullName>
            </value>
            <value>
                <fullName>Too Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>