unpackaged/main/default/objects/Lead/fields/Send_Marketing_Materials__c.field-meta.xml
<CustomField>
    <fullName>Send_Marketing_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Marketing Materials</label>
    <type>Checkbox</type>
</CustomField>