unpackaged/main/default/objects/Lead/fields/Show_Location__c.field-meta.xml
<CustomField>
    <fullName>Show_Location__c</fullName>
    <label>Show Location</label>
    <type>TextArea</type>
</CustomField>