unpackaged/main/default/objects/Lead/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <label>Show Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>