unpackaged/main/default/objects/Lead/fields/TPS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>TPS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Telephone Preference Center</description>
    <inlineHelpText>Please check the TPS field should a customer or prospect request to be opted out.</inlineHelpText>
    <label>TPS Opt Out</label>
    <type>Checkbox</type>
</CustomField>