unpackaged/main/default/objects/Lead/fields/Web_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Lead_Type__c</fullName>
    <label>Web Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONSERVICES</fullName>
            </value>
            <value>
                <fullName>ONSITE</fullName>
            </value>
            <value>
                <fullName>GES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>