unpackaged/main/default/objects/Lead/recordTypes/International_Exhibitor_Lead.recordType-meta.xml
<RecordType>
    <fullName>International_Exhibitor_Lead</fullName>
    <active>true</active>
    <businessProcess>International</businessProcess>
    <description>Created for EMEA Exhibitor Uploads</description>
    <label>International Exhibitor Lead</label>
</RecordType>