unpackaged/main/default/objects/Lead/recordTypes/International_Lead.recordType-meta.xml
<RecordType>
    <fullName>International_Lead</fullName>
    <active>true</active>
    <businessProcess>International</businessProcess>
    <label>International Lead</label>
</RecordType>