unpackaged/main/default/objects/Lead/recordTypes/North_America_Exhibitor_Lead.recordType-meta.xml
<RecordType>
    <fullName>North_America_Exhibitor_Lead</fullName>
    <active>true</active>
    <businessProcess>US</businessProcess>
    <description>Created for Canada Exhibitor lists since they don&#39;t follow the US model (Oracle &gt;&gt; SFDC using Act/Contact/Booth)</description>
    <label>North America Exhibitor Lead</label>
</RecordType>