unpackaged/main/default/objects/Lead/recordTypes/US_Lead.recordType-meta.xml
<RecordType>
    <fullName>US_Lead</fullName>
    <active>true</active>
    <businessProcess>US</businessProcess>
    <label>US Lead</label>
</RecordType>