unpackaged/main/default/objects/Lead/recordTypes/US_Lead_Event_RFP.recordType-meta.xml
<RecordType>
    <fullName>US_Lead_Event_RFP</fullName>
    <active>true</active>
    <businessProcess>US</businessProcess>
    <label>Spiro Leads</label>
</RecordType>