unpackaged/main/default/objects/Lead/validationRules/City_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Required</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(City) =0</errorConditionFormula>
    <errorDisplayField>City</errorDisplayField>
    <errorMessage>Please enter a city or town.</errorMessage>
</ValidationRule>