unpackaged/main/default/objects/Lead/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(Country ) =0,
NOT(OR($Profile.Name = &#39;GES Interface&#39;,
 RecordType.DeveloperName = &#39;US_Lead_Event_RFP&#39;,
$Profile.Name = &#39;System Administrator&#39;,
$Profile.Name = &#39;GES Service&#39;,
$User.Id =&#39;00540000003a3uV&#39;))) /*Marketo User per SR/CH */</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please enter the Country</errorMessage>
</ValidationRule>