unpackaged/main/default/objects/Lead/validationRules/Country_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>AND (LEN (Country) &gt; 0,
NOT (CONTAINS(
&quot;AD:AE:AF:AG:AI:AL:AM:AN:AO:AQ:AR:AS:ATAU:AW:AZ:&quot;&amp;
&quot;BA:BB:BD:BE:BF:BG:BH:BI:BJ:BL:BM:BN:BO:BR:BS:BT:BW:BY:BZ:&quot;&amp;
&quot;CA:CC:CD:CF:CG:CH:CI:CK:CL:CM:CN:CO:CR:CU:CV:CX:CY:CZ:&quot;&amp;
&quot;DE:DJ:DK:DM:DO:DZ:&quot;&amp;
&quot;EC:EE:EG:EH:ER:ES:ET:&quot;&amp;
&quot;FI:FJ:FK:FM:FO:FR:&quot;&amp;
&quot;GA:GB:GD:GE:GH:GI:GL:GM:GN:GQ:GR:GT:GU:GW:GY:&quot;&amp;
&quot;HK:HN:HR:HT:HU:&quot;&amp;
&quot;ID:IE:IL:IM:IN:IO:IQ:IR:IS:IT:&quot;&amp;
&quot;JE:JM:JO:JP:&quot;&amp;
&quot;KE:KG:KH:KI:KM:KN:KP:KR:KW:KY:KZ:&quot;&amp;
&quot;LA:LB:LC:LI:LK:LR:LS:LT:LU:LV:LY:&quot;&amp;
&quot;MA:MC:MD:ME:MF:MG:MH:MK:ML:MM:MN:MO:MP:MR:MS:MT:MU:MV:MW:MX:MY:MZ:&quot;&amp;
&quot;NA:NC:NE:NG:NI:NL:NO:NP:NR:NU:NZ:&quot;&amp;
&quot;OM:&quot;&amp;
&quot;PA:PE:PF:PG:PH:PK:PL:PM:PN:PR:PT:PW:PY:&quot;&amp;
&quot;QA:&quot;&amp;
&quot;RO:RS:RU:RW:&quot;&amp;
&quot;SA:SB:SC:SD:SE:SG:SH:SI:SJ:SK:SL:SM:SN:SO:SR:ST:SV:SY:SZ:&quot;&amp;
&quot;TC:TD:TG:TH:TJ:TK:TL:TM:TN:TO:TR:TT:TV:TW:TZ:&quot;&amp;
&quot;UA:UG:US:UY:UZ:&quot;&amp;
&quot;VA:VC:VE:VG:VI:VN:VU:&quot;&amp;
&quot;WF:WS:&quot;&amp;
&quot;YE:YT:&quot;&amp;
&quot;ZA:ZM:ZW:&quot;, Country)))</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please enter a valid Country Code. 
(Ex: United States = US; Canada = CA)</errorMessage>
</ValidationRule>