unpackaged/main/default/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(FirstName),
Not($User.Id =&#39;00540000003a3uV&#39;)) /*Marketo User per SR/CH */</errorConditionFormula>
    <errorMessage>Please enter a First Name</errorMessage>
</ValidationRule>