unpackaged/main/default/objects/Lead/validationRules/Lead_Convert_to_Existing_Records_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Convert_to_Existing_Records_Only</fullName>
    <active>false</active>
    <description>Please select an existing Account and Contact before completing the lead conversion</description>
    <errorConditionFormula>AND( ISPICKVAL( $User.Budget__c , &quot;Branded Experiences&quot;),   
    IsConverted = TRUE,
    ISBLANK( ConvertedAccountId ),
    ISBLANK( ConvertedContactId )
)</errorConditionFormula>
    <errorMessage>Please select an existing Account and Contact before completing the lead conversion</errorMessage>
</ValidationRule>