unpackaged/main/default/objects/Lead/validationRules/Other_Industry_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Industry_Type</fullName>
    <active>true</active>
    <description>Please specify industry type, if it is not in drop down list.</description>
    <errorConditionFormula>AND( 
ISPICKVAL( Industry, &quot;Other&quot;), 
ISBLANK( Other_Industry_Type__c) 
)</errorConditionFormula>
    <errorMessage>Please specify Industry Name in &quot;Other Industry Type&quot; field.</errorMessage>
</ValidationRule>