unpackaged/main/default/objects/Lead/validationRules/Require_Disqualify_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Disqualify_Reason</fullName>
    <active>true</active>
    <description>If Disqualify Reason = blank and Lead Status = Unqualified, &amp; not international lead record type, then Disqualify Reason must be populated.</description>
    <errorConditionFormula>AND 
( 
ISBLANK(TEXT(Disqualify_Reason__c)), 
ISPICKVAL(Status,&quot;Disqualified&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Disqualify_Reason__c</errorDisplayField>
    <errorMessage>Please enter a Disqualify Reason</errorMessage>
</ValidationRule>