unpackaged/main/default/objects/Lead/validationRules/State_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Required</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( State)=0 
&amp;&amp; 
(( Country = &#39;US&#39;) || (Country = &#39;USA&#39;) || (Country = &#39;us&#39;))</errorConditionFormula>
    <errorDisplayField>State</errorDisplayField>
    <errorMessage>Please enter a State/Province.</errorMessage>
</ValidationRule>