unpackaged/main/default/objects/Lead/validationRules/Street_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Street_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
LEN( Street ) =0)</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>Please enter a Street.</errorMessage>
</ValidationRule>