unpackaged/main/default/objects/Lead/listViews/Kim_s_Leads.listView-meta.xml
<ListView>
    <fullName>Kim_s_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.URL</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Marketo_Ignore__c</columns>
    <columns>Spiro_Marketing_Suspended__c</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Cranwell</value>
    </filters>
    <label>Kim&#39;s Leads</label>
    <language>en_US</language>
</ListView>